Devel::Cover history

{{$NEXT}}

Release 1.32 - 25 April 2019
 - Test up to 5.26.3, 5.28.3 and  5.29.10
 - Get dev environment working on MacOS
 - Fix up tests with recent Math::BigInt versions (Ed J) (github 219)
 - Add progress text when processing coverage (Christian Walde) (github 221)
 - Optionally use Term::Size (Paul "LeoNerd" Evans) (github 228)
 - Fix indentation in pod (Graham Knop) (github 229)
 - Fix warn precedence (Alexandr Evstigneev) (github 231)

Release 1.31 - 18 September 2018
 - Add queue for cpancover (Joel Berger)
 - Handle circular refs (Ed J) (github 164, 216)
 - Allow for $DEVEL_COVER_TEST_OPTS to be unset (Dick Franks) (github 217)

Release 1.30 - 14 July 2018
 - Fix incorrect merging of structure (Emiliya Boyadjieva) (github 199)
 - Fix up compiler warnings (Jens Rehsack) (github 211)
 - Test against 5.28.0, 5.29.0 and some other versions
 - Compress and then delete old cpancover data
 - Clarify some docs around ignore (Olaf Alders) (github 207)
 - Run coverage on cpp and hpp files (Jacques Germishuys) (github 203)
 - Add docs for coverage of modules on command line (Slaven Rezić) (github 204)
 - Ignore .AppleDouble files (David Cantrell) (github 200)

Release 1.29 - 15 October 2017
 - Lock using read and append mode (Stephan Loyd) (github 196)
 - Clean up lock files when running cover command

Release 1.28 - 5 October 2017
 - Fix typo in docs (Gregor Herrmann) (github 195)
 - Fix up options to cover program (github 194)

Release 1.27 - 20 September 2017
 - Test against 5.27.3
 - Add dependency on B::Debug (Ryan Voots) (github 189)
 - Remove obsolete dev and cpancover code
 - Manage multiple ignore and select options (Sullivan Beck) (github 163)
 - Write top-level html last for better sorting (Christian Walde) (github 158)
 - Restore XS coverage in cpancover (H.Merijn Brand) (github 188)
 - Allow cpancover to run fully from local directory
 - Handle missing start times in runs (Chad Granum) (github 190)