@@ -42,13 +42,13 @@ Eden Hochbaum                  eden.hochbaum@gmail.com
 Emiliya Boyadjieva             emiliya.boyadjieva@sap.com
 Erwan Lemonnier                erwan@cpan.org
 Florian Ragwitz                rafl@debian.org
+Gábor Szabó                    szabgab@gmail.com
 Gisle Aas                      gisle@ActiveState.com
 Goro Fuji                      gfuji@cpan.org
 Graham Knop                    haarg@haarg.org
 Gregor Herrmann                gregoa@debian.org
 Guillaume Aubert               aubertg@cpan.org
 Guillermo O. Freschi           kedrot@gmail.com
-Gábor Szabó                    szabgab@gmail.com
 Haydn Newport                  haydn@catalyst.net.nz
 Heikki J Laaksonen             heikki.j.laaksonen@kolumbus.fi
 Heinz Knutzen                  heinz.knutzen@gmail.com
@@ -82,6 +82,7 @@ mauke
 Max Maischein                  corion@cpan.org
 Michael Carman                 mjcarman@cpan.org
 Michael G Schwern              schwern@pobox.com
+Mohammad S Anwar               mohammad.anwar@yahoo.com
 Nathan Haigh                   n.haigh@sheffield.ac.uk
 Nicholas Clark                 nick@ccl4.org
 Niko Tyni                      ntyni@debian.org
@@ -99,6 +100,7 @@ Robin Barker                   RMBarker@cpan.org
 Ruslan Zakirov                 Ruslan.Zakirov@gmail.com
 Ryan Voots                     simcop2387@simcop2387.info
 sago35                         sago35@gmail.com
+Sébastien Aperghis-Tramoni     saper@cpan.org
 Sebastian Paaske Tørholm       eckankar@gmail.com
 Sergiy Borodych                Sergiy.Borodych@gmail.com
 Slaven Rezić                   slaven@rezic.de
@@ -110,7 +112,6 @@ Steve Hay                      shay@cpan.org
 Steve Peters                   smpeters@cpan.org
 Steve Sanbeg                   sanbeg@cpan.org
 Sullivan Beck                  sbeck@cpan.org
-Sébastien Aperghis-Tramoni     saper@cpan.org
 Tatsuhiko Miyagawa             miyagawa@bulknews.net
 Thomas Dorner                  dorner (AT) cpan.org
 Todd Rinaldo                   toddr@cpan.org
