@@ -490,8 +490,9 @@ Accessor to test_file_parameters property.
 
 =head2 get_params
 
-Populates the key C<criteria>, C<select>, C<test_parameters>, C<db_name>, C<cover_db>,
-C<cover_parameters> and C<skip> using the C<test_file> if available otherwise sets the default.
+Populates the keys C<criteria>, C<select>, C<test_parameters>, C<db_name>,
+C<cover_db>, C<cover_parameters> and C<skip> using the C<test_file> if
+available otherwise sets the default.
 
 =head2 cover_gold
 
